--- a/index.html
+++ b/index.html
@@ -361,6 +361,188 @@
         </div>
     </section>
 
+    <!-- Visa Approvals Over the Years -->
+    <section id="visa-approvals" class="py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto text-center mb-5" data-aos="fade-up">
+                    <h2 class="section-title">Visa Approvals Over the Years</h2>
+                    <p class="lead text-muted">
+                        A showcase of our successful visa approvals that have helped clients achieve their travel dreams
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-10 mx-auto" data-aos="fade-up" data-aos-delay="200">
+                    <div id="visaApprovalCarousel" class="carousel slide visa-carousel" data-bs-ride="carousel">
+                        <!-- Carousel Indicators -->
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#visaApprovalCarousel" data-bs-slide-to="0" class="active"></button>
+                            <button type="button" data-bs-target="#visaApprovalCarousel" data-bs-slide-to="1"></button>
+                            <button type="button" data-bs-target="#visaApprovalCarousel" data-bs-slide-to="2"></button>
+                            <button type="button" data-bs-target="#visaApprovalCarousel" data-bs-slide-to="3"></button>
+                            <button type="button" data-bs-target="#visaApprovalCarousel" data-bs-slide-to="4"></button>
+                        </div>
+
+                        <!-- Carousel Inner -->
+                        <div class="carousel-inner">
+                            <!-- Slide 1 - German Student Visa -->
+                            <div class="carousel-item active">
+                                <div class="visa-slide">
+                                    <div class="visa-image-wrapper">
+                                        <img src="visa.jpg"d-block w-100 visa-image" alt="German Family Reunion Visa Approval">
+                                        <div class="visa-overlay">
+                                            <div class="approval-badge">
+                                                <i class="fas fa-check-circle"></i>
+                                                <span>APPROVED</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="visa-caption">
+                                        <div class="visa-details">
+                                            <div class="country-info">
+                                                <span class="flag">🇩🇪</span>
+                                                <h5>Germany</h5>
+                                            </div>
+                                            <div class="visa-info">
+                                                <p class="visa-type">Family Reunion Visa</p>
+                                                <p class="approval-date">Approved: March 2025</p>
+                                                <p class="client-name">David M. - Engineering Student</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Slide 2 - UK Work Visa -->
+                            <div class="carousel-item">
+                                <div class="visa-slide">
+                                    <div class="visa-image-wrapper">
+                                        <img src="visa2.jpg" class="d-block w-100 visa-image" alt="UK Work Visa Approval">
+                                        <div class="visa-overlay">
+                                            <div class="approval-badge">
+                                                <i class="fas fa-check-circle"></i>
+                                                <span>APPROVED</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="visa-caption">
+                                        <div class="visa-details">
+                                            <div class="country-info">
+                                                <span class="flag">🇬🇧</span>
+                                                <h5>United Kingdom</h5>
+                                            </div>
+                                            <div class="visa-info">
+                                                <p class="visa-type">Standard Visitor Visa</p>
+                                                <p class="approval-date">Approved: June 2025</p>
+                                                <p class="client-name">Steveb N. - Healthcare Professional</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Slide 3 - Canada Tourist Visa -->
+                            <div class="carousel-item">
+                                <div class="visa-slide">
+                                    <div class="visa-image-wrapper">
+                                        <img src="viza3.jpg" class="d-block w-100 visa-image" alt="Canada Tourist Visa Approval">
+                                        <div class="visa-overlay">
+                                            <div class="approval-badge">
+                                                <i class="fas fa-check-circle"></i>
+                                                <span>APPROVED</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="visa-caption">
+                                        <div class="visa-details">
+                                            <div class="country-info">
+                                                <span class="flag">🇩🇪</span>
+                                                <h5>Germany</h5>
+                                            </div>
+                                            <div class="visa-info">
+                                                <p class="visa-type">Visitor Visa</p>
+                                                <p class="approval-date">Approved: December 2024</p>
+                                                <p class="client-name">James K. - Family Visit</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Slide 4 - Schengen Business Visa -->
+                            <div class="carousel-item">
+                                <div class="visa-slide">
+                                    <div class="visa-image-wrapper">
+                                        <img src="viza7.jpg" class="d-block w-100 visa-image" alt="Schengen Business Visa Approval">
+                                        <div class="visa-overlay">
+                                            <div class="approval-badge">
+                                                <i class="fas fa-check-circle"></i>
+                                                <span>APPROVED</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="visa-caption">
+                                        <div class="visa-details">
+                                            <div class="country-info">
+                                                <span class="flag">🇪🇺</span>
+                                                <h5>Schengen Area</h5>
+                                            </div>
+                                            <div class="visa-info">
+                                                <p class="visa-type">Business Visa</p>
+                                                <p class="approval-date">Approved: February 2024</p>
+                                                <p class="client-name">Grace A. - Business Conference</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Slide 5 - Netherlands Student Visa -->
+                            <div class="carousel-item">
+                                <div class="visa-slide">
+                                    <div class="visa-image-wrapper">
+                                        <img src="viza4.jpg" class="d-block w-100 visa-image" alt="Netherlands Student Visa Approval">
+                                        <div class="visa-overlay">
+                                            <div class="approval-badge">
+                                                <i class="fas fa-check-circle"></i>
+                                                <span>APPROVED</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="visa-caption">
+                                        <div class="visa-details">
+                                            <div class="country-info">
+                                                <span class="flag">DE</span>
+                                                <h5>Germany</h5>
+                                            </div>
+                                            <div class="visa-info">
+                                                <p class="visa-type">Visit Visa</p>
+                                                <p class="approval-date">Approved: April 2024</p>
+                                                <p class="client-name">Ananymous </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Carousel Controls -->
+                        <button class="carousel-control-prev" type="button" data-bs-target="#visaApprovalCarousel" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#visaApprovalCarousel" data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Form -->
     <section id="contact" class="py-5 bg-light">
         <div class="container">
