--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                             "Ailes Consult made my German visa application seamless. Their attention to detail and professional guidance helped me get my visa approved on the first try!"
                         </p>
                         <div class="testimonial-author">
-                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&h=100&fit=crop&crop=face" alt="David Mukasa" class="author-image">
+                            <img src="man.jpg" alt="David Mukasa" class="author-image" width="100">
                             <div class="author-info">
                                 <h6 class="author-name">David Mukasa</h6>
                                 <small class="text-muted">Student Visa to Germany</small>
@@ -327,7 +327,7 @@
                             "Excellent service! The team helped me with my UK visa application and provided constant updates throughout the process. Highly recommend their premium package."
                         </p>
                         <div class="testimonial-author">
-                            <img src="https://images.unsplash.com/photo-1494790108755-2616b612b0cf?w=100&h=100&fit=crop&crop=face" alt="Sarah Namuli" class="author-image">
+                            <img src="girl.jpg" alt="Sarah Namuli" class="author-image" width="100">
                             <div class="author-info">
                                 <h6 class="author-name">Sarah Namuli</h6>
                                 <small class="text-muted">Work Visa to UK</small>
@@ -349,7 +349,7 @@
                             "Professional, reliable, and results-driven. Ailes Consult helped me secure my Canadian tourist visa without any hassles. Their expertise is unmatched!"
                         </p>
                         <div class="testimonial-author">
-                            <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&h=100&fit=crop&crop=face" alt="James Kiwanuka" class="author-image">
+                            <img src="african.jpg" alt="James Kiwanuka" class="author-image" width="100">
                             <div class="author-info">
                                 <h6 class="author-name">James Kiwanuka</h6>
                                 <small class="text-muted">Tourist Visa to Canada</small>
